fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,34 +1,64 @@
+/*
+    $lightercelete: #d2feffff;
+    $celeste: #a8ecedff;
+    $azul: #246eb9ff;
+    $hunyadi-yellow: #edb458ff;
+    $fulvous: #e8871eff;
+    $burnt-umber: #823329ff;
+*/
+.app {
+    background-color: rgb(228, 255, 255);
+}
+
+.navbar { 
+    display:flex; 
+    flex:1;
+    justify-content:space-around;
+    background-color: #246eb9ff;
+    height:fit-content;
+}
+.icons {
+    height: fit-content;
+    width: 100%; 
+}
 .transparentbutton {
     background: none;
-    border: solid 2px transparent
+    border: solid 2px transparent;
+    border-radius: 4px;
+    text-decoration: none;
+    height: 100%;
+    width: 100%;
+    padding: 0px;
 }
 .transparentbutton:hover {
     border-color: grey;
+
 }
 
 .border {
-    border: solid 2px lightsalmon; 
+    border: solid 4px #246eb9ff; 
+    border-radius: 8px;
 }
 
-.center-container { 
+.main-container { 
     display:flex; 
     flex: 1;
     flex-direction: column;
     align-items: center;
 }
 
+.container { 
+    width: 80%;
+    padding: 20px; /** TODO: hardcoded*/
+}
+
 .sidebyside { 
     display:flex; 
     flex: 1;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .profilepic {
-    height: 100%; 
-    width: 100%; 
-
-}
-
-.half {
-    width: 50%; 
+    height: 400px; /** TODO: hardcoded*/
 }
